# pyqrypto

./: .gitignore  QubitVector.py  README.md  alzette.py  bitwise_operations.py  circuit.qasm  pyproject.toml  rOperations.py  reqs.development  requirements.txt  test_vectors.py  tests.py
docs/source/: alzette.rst  conf.py  index.rst  rOperations.rst  register_operations.rst
examples/: adders_example.py  alzette_example.py  example_adder.py  example_alzette.py  example_grover.py  example_trax.py  experiments.py  grover_on_trax.py  simple_example.py  traxl_example.py
src/pyqrypto/: alzette.py  rOperations.py  register_operations.py  sparkle.py
tests/: test_pyqrypto.py
