[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyqrypto"
version = "0.1"
authors = [ { name = "Vi Retault", email="g33kex@pm.me" } ]
description = "A library for building reversible quantum circuits that perform classical cryptography"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Security :: Cryptography"
]
dependencies = [
  'qiskit >= 0.43.1'
]
keywords = ["cryptography", "qiskit", "quantum"]

[project.urls]
Repository = "https://github.com/g33kex/pyqrypto.git"
Documentation = "https://g33kex.github.io/pyqrypto"

[tool.pytest.ini_options]
pythonpath = "src"
