[tool.poetry]
name = "pyqrypto"
version = "0.1.1"
description = "A library for building reversible quantum circuits that perform classical cryptography"
keywords = ["cryptography", "qiskit", "quantum"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Security :: Cryptography"
]
authors = ["Vi Retault <g33kex@pm.me>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/g33kex/pyqrypto.git"
documentation = "https://g33kex.github.io/pyqrypto"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^1.0.0"
qiskit-aer = { version = "^0.13.3", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
qiskit-aer = "^0.13.3"

[tool.poetry.extras]
simulate = ["qiskit_aer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fixable = ["ALL"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["N803", "N806", "PLR2004"]

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
good-names="A, B, X,Y,Z,P,K,n,c,r,k,i,t,m,x,y"
init-hook = """
try: import pylint_venv
except ImportError: pass
else: pylint_venv.inithook()
"""
